# ExpoentedeHurstwithDFA

./: DATA_README.md  LITERATURE.md  README.md  STRATEGY_COMPARISON.md  STRATEGY_RESULTS.md  advanced_strategy.py  comprehensive_fractal_strategy.py  data_analysis.py  data_processor.py  hybrid_strategy.py  improved_strategy.py  literature.py  n.py  oi.py  pdf_reader.py  pyproject.toml  requirements.txt  resultados_teste.csv  simple_strategy.py  strategy_comparison.py  strategy_demo.py  ultimate_strategy.py
__pycache__/: comprehensive_fractal_strategy.hurst_exponent-64.py313.1.nbc  comprehensive_fractal_strategy.hurst_exponent-64.py313.nbi  comprehensive_fractal_strategy.hurst_exponent-65.py313.1.nbc  comprehensive_fractal_strategy.hurst_exponent-65.py313.nbi  comprehensive_fractal_strategy.hurst_exponent-66.py313.1.nbc  comprehensive_fractal_strategy.hurst_exponent-66.py313.nbi  n.hurst_exponent-18.py313.1.nbc  n.hurst_exponent-18.py313.nbi  n.hurst_exponent-19.py313.1.nbc  n.hurst_exponent-19.py313.nbi  n.hurst_exponent-27.py313.1.nbc  n.hurst_exponent-27.py313.nbi
data/: hybrid_strategy_results.csv  raw_AAPL.csv  raw_ITUB4_SA.csv  raw_MSFT.csv  raw_PETR4_SA.csv  raw_VALE3_SA.csv
fractal_strategy/: __init__.py  backtest.py  data.py  hurst.py  strategy.py
fractal_strategy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
